# weather_station-server

./: .env  Cargo.toml
migrations/2022-03-08-013028_create_weather/: up.sql
src/: main.rs  schema.rs
src/views/: mod.rs  path.rs
src/views/structs/: mod.rs  new_weather.rs  weather.rs
src/views/weather/: hello.rs  mod.rs  new_entry.rs  read.rs
